<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/gradient">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/girl"
        android:scaleType="fitStart"
        >
    </ImageView>


    <View
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:alpha="0.7"
        android:background="@drawable/gradient">
    </View>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_gnome"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        android:paddingTop="45dp"
        >
    </ImageView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til1"
        android:layout_width="0dp"
        android:layout_marginTop="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:startIconDrawable="@drawable/username_icon_foreground">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/username"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til1"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:startIconDrawable="@drawable/password_icon_foreground"
        app:passwordToggleEnabled="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:text="@string/login"
        android:id="@+id/button"
        android:layout_width="95dp"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/til2"
        android:layout_marginTop="20dp"
        style="@style/mybutton" />

    <Button
        android:text="@string/register"
        android:id="@+id/button2"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/til2"
        style="@style/mybutton2"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="@id/guideline3" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"/>


</androidx.constraintlayout.widget.ConstraintLayout>